--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,9 @@
     text-overflow: ellipsis;
     overflow: hidden; }
   .navbar .navbar-custom-right-menu {
-    float: right; }
+    float: right; 
+    margin-top: 8px;
+  }
   .navbar .navbar-toggle {
     text-decoration: none;
     color: #fff;
@@ -48,7 +50,7 @@
   font-size: 24px;
   position: absolute;
   top: 18px;
-  left: 20px;
+  right: 20px;
   margin-right: 10px;
   -moz-transform: scale(0);
   -ms-transform: scale(0);
@@ -92,7 +94,9 @@
   transform: scale(1); }
 
 .navbar-header {
-  padding: 10px 7px; }
+  padding: 10px 7px; 
+  padding-left: 0px;
+}
   .navbar-header .bars {
     float: left;
     text-decoration: none; }
@@ -2360,7 +2364,7 @@
 
 /* General ===================================== */
 body {
-  background-color: #e9e9e9;
+  background-color: #fff;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   -webkit-transition: all 0.5s;
@@ -6695,7 +6699,7 @@ fieldset[disabled] .form-control {
   font-size: 24px;
   position: absolute;
   top: 18px;
-  left: 20px;
+  right: 20px;
   margin-right: 10px;
   -moz-transform: scale(0);
   -ms-transform: scale(0);
@@ -6741,7 +6745,8 @@ fieldset[disabled] .form-control {
   transform: scale(1); }
 
 .navbar-header {
-  padding: 10px 7px; }
+  padding: 10px 7px;
+  padding-left: 0px; }
   .navbar-header .bars {
     float: left;
     text-decoration: none; }
@@ -7499,7 +7504,7 @@ fieldset[disabled] .form-control {
     position: absolute;
     bottom: 0;
     width: 100%;
-    border-top: 1px solid #eee;
+    border-top: 1px solid #1A1A1A;
     padding: 15px;
     overflow: hidden; }
     .sidebar .legal .copyright {
@@ -7524,8 +7529,9 @@ fieldset[disabled] .form-control {
     padding: 13px 15px 12px 15px;
     white-space: nowrap;
     position: relative;
-    border-bottom: 1px solid #e9e9e9;
+    border-bottom: 1px solid #1A1A1A;
     background: url("../images/user-img-background.jpg") no-repeat no-repeat;
+    background: #1A1A1A;
    }
     .sidebar .user-info .image {
       margin-right: 12px;
@@ -7571,14 +7577,18 @@ fieldset[disabled] .form-control {
   .sidebar .menu {
     position: relative;
     overflow-y: auto;
-    height: 90vh; }
+    height: 90vh; 
+    background: #1A1A1A;
+  }
     .sidebar .menu .list {
       list-style: none;
       padding-left: 0; }
       .sidebar .menu .list li.active > :first-child span {
         font-weight: bold; }
       .sidebar .menu .list .header {
-        background: #eee;
+        visibility: hidden;
+        background: #1A1A1A;
+        color: white;
         font-size: 12px;
         font-weight: 600;
         padding: 8px 16px; }
@@ -7625,7 +7635,7 @@ fieldset[disabled] .form-control {
         -webkit-transform: scale(1);
         transform: scale(1); }
       .sidebar .menu .list a {
-        color: #747474;
+        color: #fff;
         position: relative;
         display: inline-flex;
         vertical-align: middle;
@@ -7639,7 +7649,7 @@ fieldset[disabled] .form-control {
           right: 15px; }
         .sidebar .menu .list a span {
           margin: 7px 0 7px 12px;
-          color: #333;
+          color: #fff;
           font-weight: bold;
           font-size: 14px;
           overflow: hidden; }
@@ -8065,7 +8075,7 @@ html.ie11 .bs-searchbox .form-control {
 .navbar-brand {
 	padding: 0px 0px;
 	height: auto;
-	max-width: 100px;
+	max-width: 120px;
 	margin-left: 10px !important;
 }
 
@@ -8135,4 +8145,37 @@ tr.unread {
     width: 150px ! important;
     margin: auto ! important;
     text-align: center;
+}
+
+
+.sidebar-logo {
+  background: #1A1A1A;
+}
+
+
+.sidebar-logo img {
+  width: 120px;
+  margin-left: 15px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+.theme-red .navbar {
+  display: none;
+}
+
+
+.sidebar {
+
+  height: 100vh ;
+  top: 0px;
+}
+
+#templates {
+  display: none;
+}
+
+@media (max-width: 1170px) {
+  .theme-red .navbar {
+    display: inline-block;
+  }
 }
