--- a/public/css/themes/all-themes.css
+++ b/public/css/themes/all-themes.css
@@ -1,8 +1,15 @@
 ﻿.theme-red .navbar {
-  background-color: #F44336; }
+  background-color: #F44336; 
+  
+  background-color: #1A1A1A;
+  height: 70px;
+}
 
 .theme-red .navbar-brand {
-  color: #fff; }
+  color: #fff; 
+  margin-left: 0 ! important;
+  margin-top: 4px ! important;
+}
   .theme-red .navbar-brand:hover {
     color: #fff; }
   .theme-red .navbar-brand:active {
@@ -39,9 +46,9 @@
   background-color: transparent; }
 
 .theme-red .sidebar .legal {
-  background-color: #fff; }
+  background-color: #1A1A1A; }
   .theme-red .sidebar .legal .copyright a {
-    color: #F44336 !important; }
+    color: #fff !important; }
 
 .theme-pink .navbar {
   background-color: #E91E63; }
