--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2407,7 +2407,9 @@ section.content {
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
   -webkit-transition: 0.5s;
-  transition: 0.5s; }
+  transition: 0.5s; 
+  position: relative;
+}
 
 /* Dashboard =================================== */
 .dashboard-flot-chart {
@@ -8170,6 +8172,101 @@ tr.unread {
   top: 0px;
 }
 
+
+.side_menu_bar_wrap li a .material-icons {
+  background: #1A1A1A;
+  color: white ! important;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  margin-top: -5px ! important;
+  border: 1px solid #707070;
+  transition: 0.3s all;
+}
+
+
+.side_menu_bar_wrap li a:hover .material-icons {
+  background: white;
+  color: #1A1A1A ! important;
+  margin-top: -5px ! important;
+  border: 1px solid #707070;
+}
+
+.side_menu_bar_wrap li.active a .material-icons {
+  background: white;
+  color: #1A1A1A ! important;
+  margin-top: -5px ! important;
+  border: 1px solid #707070;
+}
+
+
+.side_menu_bar_wrap li:hover span{
+  color: #F44336 ! important;  
+  transition: 0.3s all;
+}
+
+.side_menu_bar_wrap li.active span{
+  color: #F44336 ! important;  
+  transition: 0.3s all;
+}
+
+
+
+#log_out span {
+  border: 1px solid white;
+  padding: 10px 20px;
+  margin-left: 0;
+}
+
+
+.nav_top_bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  width: 100%;
+  top: -70px;
+}
+
+.search_wrap {
+  display: flex;
+  align-items: center;
+  width: 30%;  
+}
+
+.search_field {
+
+    background: #E0E0E0;
+    border: 1px solid #E0E0E0;
+    height: 37px;
+    width: 100%;
+    padding: 0 10px;
+
+}
+
+.search_btn {
+
+    background: black;
+    color: white;
+    font-size: 37px;
+    padding: 0px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.nav_logout {
+    border: 1px solid black;
+    padding: 8px 20px;
+    color: black;
+    font-weight: 600;
+    font-size: 11px;
+}
+
+.logout_btn {
+  color: black;
+  text-decoration: none ! important;
+}
 
 
 @media (max-width: 1170px) {
