--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4549,7 +4549,7 @@ section.content {
 /* Tables ====================================== */
 
 .table-responsive {
-    padding-top: 10px;
+    margin-top: 10px;
     overflow-x: unset;
 }
 .table{
@@ -8255,6 +8255,8 @@ tr.unread {
     padding: 0px;
     text-align: center;
     cursor: pointer;
+    left: -24px;
+    position: relative;
 }
 
 .nav_logout {
@@ -8302,10 +8304,25 @@ tr.unread {
   color: black;
 }
 
+/*searchbox's cancel button appear*/
 .dataTables_wrapper .dataTables_filter input::-webkit-search-cancel-button {
   -webkit-appearance: button !important;
 }
 
+/*
+.search_field::-webkit-search-cancel-button{
+  -webkit-appearance: button !important;
+  display:block ! important;
+}
+*/
+
+.close_search_btn{
+    position: relative;
+    left: -29px;
+    top: 0px;
+    display: none;
+    cursor: pointer;
+}
 
 .show_create_date {
   font-size: 11px;
@@ -8330,6 +8347,13 @@ table.dataTable tbody tr.selected_tr {
   background-color: #eeeeee !important;
 }
 
+#note_datatable_wrapper .row:first-child{
+  display: none ! important;
+}
+
+.table.dataTable{
+  margin-top: 0 ! important;
+}
 
 .note-details-header {
   display: flex;
@@ -8416,6 +8440,28 @@ table.dataTable tbody tr.selected_tr {
   margin-right: 5px; 
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+  box-shadow: inset 0 0 5px #fff; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 
 @media (max-width: 1170px) {
   .theme-red .navbar {
